deployment/k8s/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thruster-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: thruster-ui
  template:
    spec:
      containers:
      - name: thruster-ui
        image: mongmx/thruster-ui:prod
        ports:
          - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
        readinessProbe:
          tcpSocket:
            port: 80
