deployment/k8s/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thruster-ui
spec:
  type: ClusterIP
  selector:
    app: thruster-ui
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
